--- a/ajax.html
+++ b/ajax.html
@@ -135,9 +135,9 @@ function usersListItemTemplate(user){
 
 function userInfoTemplate(user){
 return `<div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">User</div>
   <div class="card-body">
-    <h5 class="card-title">Light card title</h5>
+    <h5 class="card-title"></h5>
    <ul class = "list-group list-group-flush">
     <li class="list-group-item"><b>Nickname:</b> ${user.username}</li>
     <li class="list-group-item"><b>Website:</b> ${user.website}</li>
